--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT= 8080
-MONGO_URI = mongodb://localhost:27017/pos
+MONGO_URI=mongodb+srv://okk:9960o3lT7SZ7uwLl@cluster0.fj7ekvg.mongodb.net/test
+
+
